--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
         <div id="responsive">
 
         </div>
+    <div id="bloc">
 
+        <div id="text1">
+            <h1>Lorem</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos deserunt maiores animi sint, temporibus ratione laudantium reiciendis illum consequatur, obcaecati fugit consectetur id quibusdam? Autem magnam laboriosam dolore maiores ut.</p>
+
+        </div>
+        <div id="text2">
+            <h1>Lorem</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos deserunt maiores animi sint, temporibus ratione laudantium reiciendis illum consequatur, obcaecati fugit consectetur id quibusdam? Autem magnam laboriosam dolore maiores ut.</p>
+
+        </div>
+    </div>
+
+    <footer>
+        <ul>
+            
+
+        </ul>
+    </footer>
 </body>
 </html>
 
