--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
             <!-- je cree 2 blocs pour mettre du texte dedans -->
     <div id="bloc">
         <div id="text1">
-            <h1>Lorem</h1>
+            <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos deserunt maiores animi sint, temporibus ratione laudantium reiciendis illum consequatur, obcaecati fugit consectetur id quibusdam? Autem magnam laboriosam dolore maiores ut.</p>
         </div>
         <div id="text2">
-            <h1>Lorem</h1>
+            <h2>Lorem</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos deserunt maiores animi sint, temporibus ratione laudantium reiciendis illum consequatur, obcaecati fugit consectetur id quibusdam? Autem magnam laboriosam dolore maiores ut.</p>
         </div>
     </div>
                                     <!-- fin de bloc -->
 
                                     <!-- debut de liste -->
-                                    <!-- je cree une liste avec 5 item  -->
+                                    <!-- je cree une liste avec 5 items -->
     <footer>
         <ul>
             <li>item1</li>
